change blurry icons bug in css

--- a/Resources/Public/StyleSheet/mod1_default.css
+++ b/Resources/Public/StyleSheet/mod1_default.css
@@ -66,7 +66,6 @@ div.warning a {
   border: none;
   text-align: center;
   vertical-align: middle;
-  padding: 0 1px;
 }
 
 .tpm-title-cell {
